<?xml version="1.0"?>
<package format="2">
  <name>swiftnav_piksi_msgs</name>
  <version>0.0.4</version>
  <description>
    Messages from a Swift Navigation Piksi RTK GPS receiver.
  </description>
  <maintainer email="preed@swri.org">P. J. Reed</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
